--- a/css/mobile.css
+++ b/css/mobile.css
@@ -107,7 +107,7 @@
         align-items: center;
         justify-content: space-between;
         flex-direction: column;
-        padding-bottom: 5%;        
+        margin-bottom: 10%;       
     }
 
     .about-employee-pic {
@@ -115,6 +115,7 @@
         height: 200px;
         flex-shrink: 0;
         border-radius: 50%;
+        margin-bottom: 10%;
         }
     
       .about-employee:nth-of-type(even) .about-employee-pic {
