--- a/css/tablet.css
+++ b/css/tablet.css
@@ -14,6 +14,9 @@
     nav .nav-links a {
         color:#f1f1f1;
     }
+    .mobile-nav-links {
+        display:none;
+    }
     
     .contact-link {
         cursor: not-allowed;     
@@ -24,7 +27,7 @@
 /* LANDING PAGE START */
     
     .landing-page-shadow .container {
-        height: 35%;
+        height: 25%;
     }
     
     .landing-page p {
@@ -46,6 +49,7 @@
     .about .container h1 {
         font-size: 36px;
         text-align: left;
+        margin-bottom: 5%;
     }
 
     .about-employee {
@@ -72,7 +76,7 @@
         width: calc(100% - 260px);
     }
 
-    /*OFFER START*/
+/*OFFER START*/
     .offer h1 {
         margin-bottom: 10%;
         text-align: left;
@@ -89,7 +93,36 @@
         gap: 63px;           
        
     }
+/*OFFER END*/
 
+/*FOOTER START*/
+
+footer .container {
+    display: flex;
+    justify-content: space-between;
+    align-items:center;
+    flex-direction: row;
+    height: 100%;
+}
+
+.footer-icons {
+    display:flex;
+    justify-content: space-evenly;
+    width:15%;
+    color:#fff;
+    margin-bottom: 0;
+}
+
+
+footer span {
+    font-weight: bold;
+    font-size: 18px;
+    color:#fff;       
+}
+
+
+
+/*FOOTER END*/
     
 }
     
